RESOLVED FIXED138904
AX: Unclear that user and password are autofilled, no VoiceOver version of the yellow outline.
https://bugs.webkit.org/show_bug.cgi?id=138904
Summary AX: Unclear that user and password are autofilled, no VoiceOver version of th...
chris fleizach
Reported 2014-11-19 17:56:03 PST
If I find my focus in a user field with password already filled in, I am unaware of the difference between the website filling the content via cookie or other means, vs Safari's form filling function. Visually this is indicated with the yellow outline, and is not conveyed to the VO user. <rdar://problem/18900545>
Attachments
patch (7.59 KB, patch)
2014-11-19 17:59 PST, chris fleizach
no flags
patch (7.77 KB, patch)
2014-11-20 10:00 PST, chris fleizach
no flags
chris fleizach
Comment 1 2014-11-19 17:59:42 PST
Csaba Osztrogonác
Comment 2 2014-11-20 00:38:30 PST
Comment on attachment 241918 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=241918&action=review > Source/WebCore/accessibility/AccessibilityObject.cpp:1984 > + return downcast<HTMLInputElement>(*node).isAutofilled(); ../../Source/WebCore/accessibility/AccessibilityObject.cpp: In member function 'bool WebCore::AccessibilityObject::isValueAutofilled() const': ../../Source/WebCore/accessibility/AccessibilityObject.cpp:1984:45: error: invalid use of incomplete type 'class WebCore::HTMLInputElement' return downcast<HTMLInputElement>(*node).isAutofilled(); ^
chris fleizach
Comment 3 2014-11-20 00:56:48 PST
(In reply to comment #2) > Comment on attachment 241918 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=241918&action=review > > > Source/WebCore/accessibility/AccessibilityObject.cpp:1984 > > + return downcast<HTMLInputElement>(*node).isAutofilled(); > > ../../Source/WebCore/accessibility/AccessibilityObject.cpp: In member > function 'bool WebCore::AccessibilityObject::isValueAutofilled() const': > ../../Source/WebCore/accessibility/AccessibilityObject.cpp:1984:45: error: > invalid use of incomplete type 'class WebCore::HTMLInputElement' > return downcast<HTMLInputElement>(*node).isAutofilled(); > ^ Must be missing an #include for HTMLInputElement.
chris fleizach
Comment 4 2014-11-20 10:00:59 PST
chris fleizach
Comment 5 2014-11-21 09:18:45 PST
I think the EFL failure is unrelated ----------- -MT Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o -MF "Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o.d" -o Source/WebCore/CMakeFiles/WebCore.dir/rendering/RenderBlock.cpp.o -c ../../Source/WebCore/rendering/RenderBlock.cpp c++: internal compiler error: Killed (program cc1plus) Please submit a full bug report, with preprocessed source if appropriate. See <file:///usr/share/doc/gcc-4.8/README.Bugs> for instructions. ninja: build stopped: subcommand failed.
Mario Sanchez Prada
Comment 6 2014-11-21 10:34:32 PST
Comment on attachment 241956 [details] patch I agree on that the EFL error seems unrelated
WebKit Commit Bot
Comment 7 2014-11-21 16:02:47 PST
Comment on attachment 241956 [details] patch Clearing flags on attachment: 241956 Committed r176481: <http://trac.webkit.org/changeset/176481>
WebKit Commit Bot
Comment 8 2014-11-21 16:02:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.