AX: Unclear that user and password are autofilled, no VoiceOver version of the yellow outline. https://bugs.webkit.org/show_bug.cgi?id=138904

Reviewed by Mario Sanchez Prada.

Source/WebCore:

Add an attribute that marks when a text field is auto-filled.

Test: accessibility/auto-filled-value.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isValueAutofilled):
* accessibility/AccessibilityObject.h:
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):

LayoutTests:

* accessibility/auto-filled-value.html: Added.
* platform/mac/accessibility/auto-filled-value-expected.txt: Added.


Canonical link: https://commits.webkit.org/156861@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176481 268f45cc-cd09-0410-ab3c-d52691b4dbfc